Bug 360037 - KF5 yakuake sometimes gets detached and shows up in the task manager
Summary: KF5 yakuake sometimes gets detached and shows up in the task manager
Status: RESOLVED FIXED
Alias: None
Product: yakuake
Classification: Applications
Component: general (other bugs)
Version First Reported In: 3.0.5
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Eike Hein
URL:
Keywords:
: 343061 362017 373545 (view as bug list)
Depends on:
Blocks:
 
Reported: 2016-03-03 18:14 UTC by Rémi Verschelde
Modified: 2021-05-18 15:14 UTC (History)
28 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Screenshot of Yakuake in "detached task" mode (234.06 KB, image/png)
2016-03-03 18:15 UTC, Rémi Verschelde
Details
Workaround to hide Yakuake from taskbar using KWin rule (198 bytes, text/plain)
2016-03-29 12:20 UTC, Ondrej Machulda
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Rémi Verschelde 2016-03-03 18:14:42 UTC
First of all thanks for the 3.0.2 release, it's great!

Last bug that I have with it since the move to KF5 is as follows: when expanding the yakuake window, it may _at times_ be "detached" and show up like a normal application in the Plasma taskbar. I guess there is a focus conflict of some sort.

Reproducible: Always

Steps to Reproduce:
1. Press the toggle button repeatedly, without doing anything else in particular
2. After a few presses, the "Yakuake" task should appear in the taskbar
3. Pressing the toggle button again should fold it and remove it from the taskbar; pressing the taskbar button makes Yakuake disappear, and quite hard to find back.
Comment 1 Rémi Verschelde 2016-03-03 18:15:16 UTC
Created attachment 97661 [details]
Screenshot of Yakuake in "detached task" mode
Comment 2 Rémi Verschelde 2016-03-03 18:19:03 UTC
> 3. Pressing the toggle button again should fold it and remove it from the taskbar; pressing the taskbar button makes Yakuake disappear, and quite hard to find back.

Erratum here: actually pressing the task in the task bar only folds the terminal again, but another press of the toggle button shows it again (i.e. normal behaviour). The behaviour I described was what happened in pre-3.0.0 git builds.

The rest of the issue as described in the other points is of course still valid.
Comment 3 Eike Hein 2016-03-03 18:23:39 UTC
It's related to a bug in Qt 5 that can also affect Plasma panel popup dialogs. Basically, in Qt 4 we could set the "skip taskbar" flag on windows before showing it, now Qt's show code clobbers the state and we need to set after, which sometimes causes a race condition. I need to sit down and work out a solution at some point (and maybe fix it in Qt).
Comment 4 Ondrej Machulda 2016-03-29 12:20:21 UTC
Created attachment 98141 [details]
Workaround to hide Yakuake from taskbar using KWin rule

+1 here with 3.0.2. I also found workaround using kwin window rules, which allows you to force the "skip taskbar" behavior - you can import attached kwin rule.
Comment 5 Alex The Bassist 2016-12-04 09:22:36 UTC
When this is gonna be fixed? It's almost a year since bug creation.
Comment 6 Alex The Bassist 2016-12-04 09:23:33 UTC
Also, I confirm that it affects Debian Testing users too.
Comment 7 Eike Hein 2016-12-06 15:01:46 UTC
^ Probably with the upcoming 4.0 / full UI rewrite.
Comment 8 Elvis Angelaccio 2016-12-12 10:41:39 UTC
*** Bug 373545 has been marked as a duplicate of this bug. ***
Comment 9 Elvis Angelaccio 2016-12-12 10:42:35 UTC
*** Bug 362017 has been marked as a duplicate of this bug. ***
Comment 10 Rémi Verschelde 2017-02-20 10:07:22 UTC
FWIW, I haven't reproduced this issue in a long time - I'm now running Yakuake 3.0.2 on Plasma 5.8.5 with Qt 5.6.2, all this on Mageia 6.
Comment 11 Rémi Verschelde 2017-02-20 10:08:47 UTC
Actually I spoke too fast, following the steps in comment 0 does reproduce the behaviour described in comment 2.
Comment 12 Eike Hein 2017-03-31 10:59:51 UTC
Git commit 1071c021ae7507140d2a6f8dd97251841bb3a922 by Eike Hein.
Committed on 31/03/2017 at 10:57.
Pushed by hein into branch 'master'.

Fix Yakuake sometimes showing up in Task Manager.

Qt 5 needs a little more prodding for window state. This is the same
code we use in Plasma::Dialog.
CCMAIL:nicolas.alvarez@gmail.com

M  +19   -0    app/mainwindow.cpp
M  +1    -0    app/mainwindow.h

https://commits.kde.org/yakuake/1071c021ae7507140d2a6f8dd97251841bb3a922
Comment 13 confused 2017-04-01 07:57:27 UTC
Thanks for working on it :)
Unfortunately, I can still reproduce this bug using version 3.0.3 on Arch Linux. It still pops up randomly in the panel.
Let me know if you need more information on my setup.
Comment 14 Rémi Verschelde 2017-04-02 19:47:41 UTC
I can also still reproduce the bug on Mageia 6 with Qt 5.6.2 and yakuake 3.0.3.
Comment 15 Eike Hein 2017-04-03 09:54:03 UTC
With Qt 5.6.x it's expected. The underlying problem is that Qt 5 sucks. The code got fixed in Qt 5.7.1, IIRC, although Yakuake still has to do some of the heavy-lifting - the code added in 3.0.3 (inspired by Plasma::Dialog where we had the same problem with panel popups) should do that. For me it happened about 2 out of 40 times with 3.0.2 code and 0 out of 40 now. Is anyone seeing this with 5.7.1+ still?
Comment 16 Antonio Rojas 2017-04-03 10:03:56 UTC
(In reply to Eike Hein from comment #15)
> With Qt 5.6.x it's expected. The underlying problem is that Qt 5 sucks. The
> code got fixed in Qt 5.7.1, IIRC, although Yakuake still has to do some of
> the heavy-lifting - the code added in 3.0.3 (inspired by Plasma::Dialog
> where we had the same problem with panel popups) should do that. For me it
> happened about 2 out of 40 times with 3.0.2 code and 0 out of 40 now. Is
> anyone seeing this with 5.7.1+ still?

Yes, Qt 5.8.0 here. It happens as frequently in 3.0.3 as it did in 3.0.2
Comment 17 confused 2017-04-03 10:12:49 UTC
Same for me (Qt 5.8.0).
Comment 18 Nikos Chantziaras 2017-04-06 14:58:13 UTC
With Yakuake 3.0.4 on Qt 5.7.1 it still happens at the same frequency as in the past for me.
Comment 19 Germano Massullo (Thetra) 2017-07-17 15:55:24 UTC
Confirming on yakuake 3.0.4 + Qt 5.7.1 + Kf 5.36
Comment 20 Alexander Mentyu 2017-08-16 15:38:55 UTC
Looks like related to https://bugs.kde.org/show_bug.cgi?id=343061

Confirming this bug in Yakuake 3.0.4+

Qt Version: 5.9.1
Frameworks Version: 5.36.0
Operating System: Linux 4.9.40-1-MANJARO x86_64
Distribution: "Netrunner Rolling"
Comment 21 Kevin Funk 2017-08-17 07:21:22 UTC
*** Bug 343061 has been marked as a duplicate of this bug. ***
Comment 22 Floreal 2017-09-15 07:26:53 UTC
This bug is still present in KDE neon User edition:
- Yakuake 3.04
- Qt 5.9.1
- Kf 5.38

Are you still working on solving this bug?
Comment 23 Germano Massullo (Thetra) 2018-04-11 11:37:24 UTC
Confirming on Yakuake 3.0.5 + KDE Frameworks 5.44.0 + Qt 5.9.4
Comment 24 Clay Weber 2020-08-18 20:15:48 UTC
This still happens on Yakuake 20.08.0
KDE Neon with Plasma 5.194 and Qt 5.14.2
Comment 25 Nikos Chantziaras 2020-08-18 20:18:54 UTC
(In reply to Clay Weber from comment #24)
> This still happens on Yakuake 20.08.0
> KDE Neon with Plasma 5.194 and Qt 5.14.2

Yes, same here. It has never stopped happening for years.
Comment 26 José 2020-10-21 21:51:26 UTC
It's still there.
I think this issue affects "Keep window above" option indirectly.

- KDE Neon
- KDE Plasma 5.20.0
- Yakuake 20.08.2
Comment 27 medin 2021-03-25 13:24:17 UTC
It still happens with :

Operating System: Manjaro Linux
KDE Plasma Version: 5.21.3
KDE Frameworks Version: 5.80.0
Qt Version: 5.15.2
Kernel Version: 5.4.105-1-MANJARO
OS Type: 64-bit
Graphics Platform: X11
Comment 28 Bug Janitor Service 2021-05-13 12:36:08 UTC
A possibly relevant merge request was started @ https://invent.kde.org/utilities/yakuake/-/merge_requests/42
Comment 29 Maximilian Schiller 2021-05-18 15:14:10 UTC
Git commit 9202df97322ae2f58104e387e914de15b06644ff by Maximilian Schiller, on behalf of Bharadwaj Raju.
Committed on 18/05/2021 at 15:14.
Pushed by mschiller into branch 'master'.

Fix Yakuake icon appearing in taskbar through Qt::Tool window flag

So far we've been setting _NET_WM_STATE_SKIP_TASKBAR ourselves, but
Qt messes with this, leading to race conditions where it still
appears in the taskbar. This sets the Qt::Tool window flag, which
will set it via Qt itself, and won't be clobbered. An old hack has
been removed, as it isn't needed anymore.

Also makes show animation match retract animation.

M  +1    -20   app/mainwindow.cpp
M  +0    -1    app/mainwindow.h

https://invent.kde.org/utilities/yakuake/commit/9202df97322ae2f58104e387e914de15b06644ff