Fix Yakuake sometimes showing up in Task Manager.

Qt 5 needs a little more prodding for window state. This is the same
code we use in Plasma::Dialog.

BUG:360037
CCMAIL:nicolas.alvarez@gmail.com